--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_redux: ^0.6.0
   intl: ^0.16.0
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.2
+  cloud_firestore: ^0.12.9+5
 
 dev_dependencies:
   flutter_test:
