--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_redux: ^0.6.0
   intl: ^0.16.0
+  firebase_core: ^0.4.3+1
+  firebase_auth: ^0.15.3
+  cloud_firestore: ^0.13.0+1
 
 
 dev_dependencies:
