--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_redux: ^0.6.0
+  redux_thunk: ^0.3.0
   intl: ^0.16.0
   firebase_core: ^0.4.3+1
   firebase_auth: ^0.15.3
