--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: ^0.4.3+1
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
+  flutter_reorderable_list: ^0.1.3
 
 
 dev_dependencies:
